--- a/index.html
+++ b/index.html
@@ -398,6 +398,18 @@
 			</div>
 		</div>
 	</footer>
+	<!-- modal winodows -->
+	<div class="modal-window" data-modal="sharing">
+		<div class="window">
+			<div class="close"></div>
+			<h2>
+				Сделать репост
+			</h2>
+			<div class="sharing-wr">
+				<div class="pluso" data-background="transparent" data-options="medium,square,line,vertical,nocounter,theme=08" data-services="facebook,vkontakte"></div>
+			</div>
+		</div>
+	</div>
 	<!-- script -->
 		<script src="js/jquery/jquery-3.4.1.min.js"></script>
 		<script src="js/load-json.js"></script>
@@ -409,5 +421,17 @@
 		<!-- query-ui-->
 		<script src="js/plugins/owl.carousel.js"></script>
 		<script src="js/plugins/owl.carousel-include.js"></script>
+		<!-- pluso -->
+		<script type="text/javascript">(function() {
+			if (window.pluso)if (typeof window.pluso.start == "function") return;
+			if (window.ifpluso==undefined) { window.ifpluso = 1;
+				var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
+				s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
+				s.src = ('https:' == window.location.protocol ? 'https' : 'http')  + '://share.pluso.ru/pluso-like.js';
+				var h=d[g]('body')[0];
+				h.appendChild(s);
+			}})();
+		</script>
+	<!-- script -->
 </body>
 </html>
