--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 		<script src="js/plugins/owl.carousel.js"></script>
 		<script src="js/plugins/owl.carousel-include.js"></script>
 		<!-- pluso -->
-		<script type="text/javascript">(function() {
+		<!-- <script type="text/javascript">(function() {
 			if (window.pluso)if (typeof window.pluso.start == "function") return;
 			if (window.ifpluso==undefined) { window.ifpluso = 1;
 				var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
@@ -431,7 +431,7 @@
 				var h=d[g]('body')[0];
 				h.appendChild(s);
 			}})();
-		</script>
+		</script> -->
 	<!-- script -->
 </body>
 </html>
