--- a/index.html
+++ b/index.html
@@ -410,6 +410,14 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="modal-error" data-stasus="reiting">
+		Вы уже голосовали за этого спикера
+	</div>
+
+	<div class="modal-success" data-stasus="reiting">
+		Ваш голос был засчитан
+	</div>
 	<!-- script -->
 		<script src="js/jquery/jquery-3.4.1.min.js"></script>
 		<script src="js/load-json.js"></script>
@@ -422,7 +430,7 @@
 		<script src="js/plugins/owl.carousel.js"></script>
 		<script src="js/plugins/owl.carousel-include.js"></script>
 		<!-- pluso -->
-		<!-- <script type="text/javascript">(function() {
+		<script type="text/javascript">(function() {
 			if (window.pluso)if (typeof window.pluso.start == "function") return;
 			if (window.ifpluso==undefined) { window.ifpluso = 1;
 				var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
@@ -431,7 +439,7 @@
 				var h=d[g]('body')[0];
 				h.appendChild(s);
 			}})();
-		</script> -->
+		</script>
 	<!-- script -->
 </body>
 </html>
